# IrrlichtCMake

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/Irrlicht/: CMakeLists.txt
